Self/playorg/Unpackaged/Config/objects/Assessment_Question__c.object
<CustomObject>
    <description>ASSESSMENT  - Question for Assessment</description>
    <fields>
        <fullName>Answered_Questions__c</fullName>
        <label>Answered Questions</label>
        <summaryFilterItems>
            <field>Assessment_Response__c.Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Assessment_Response__c.Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Question_Description__c</fullName>
        <description>Description of the Question</description>
        <label>Question Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Domain__c</fullName>
        <label>Question Domain</label>
        <referenceTo>Assessment_Domain__c</referenceTo>
        <relationshipLabel>Assessment Questions</relationshipLabel>
        <relationshipName>Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <description>Number of the Question</description>
        <label>Question Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Title__c</fullName>
        <description>Title of the Question</description>
        <label>Question Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <summarizedField>Assessment_Response__c.Score__c</summarizedField>
        <summaryForeignKey>Assessment_Response__c.Question__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Assessment Question</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>QuestionID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>